--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="description" content="Learn about Goodyear ElectricDrive tires, their features, benefits, and more.">
     <title>Goodyear ElectricDrive Tires</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
-    <header>
+    <header class="animate__animated animate__fadeInDown">
         <h1>Goodyear ElectricDrive Tires</h1>
     </header>
     <main>
-        <section id="features">
+        <section id="features" class="animate__animated animate__fadeInUp">
             <h2>Features</h2>
             <p>Discover the innovative features of Goodyear ElectricDrive tires. These tires are designed specifically for electric vehicles, providing enhanced performance, efficiency, and durability. Key features include:</p>
             <ul>
@@ -23,7 +24,7 @@
             </ul>
             <img src="https://www.goodyear.com/images/features.jpg" alt="Goodyear ElectricDrive Features">
         </section>
-        <section id="benefits">
+        <section id="benefits" class="animate__animated animate__fadeInUp animate__delay-1s">
             <h2>Benefits</h2>
             <p>Learn about the benefits of using Goodyear ElectricDrive tires. These tires offer numerous advantages for electric vehicle owners, including:</p>
             <ul>
@@ -34,7 +35,7 @@
             </ul>
             <img src="https://www.goodyear.com/images/benefits.jpg" alt="Goodyear ElectricDrive Benefits">
         </section>
-        <section id="technology">
+        <section id="technology" class="animate__animated animate__fadeInUp animate__delay-2s">
             <h2>Technology</h2>
             <p>Goodyear ElectricDrive tires incorporate advanced technology to meet the unique demands of electric vehicles. Some of the cutting-edge technologies used in these tires include:</p>
             <ul>
@@ -45,7 +46,7 @@
             </ul>
             <img src="https://www.goodyear.com/images/technology.jpg" alt="Goodyear ElectricDrive Technology">
         </section>
-        <section id="reviews">
+        <section id="reviews" class="animate__animated animate__fadeInUp animate__delay-3s">
             <h2>Customer Reviews</h2>
             <p>Read what customers are saying about Goodyear ElectricDrive tires:</p>
             <blockquote>
@@ -59,7 +60,7 @@
             </blockquote>
         </section>
     </main>
-    <footer>
+    <footer class="animate__animated animate__fadeInUp animate__delay-4s">
         <p>&copy; 2023 Tarushv Kosgi. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
